--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     $span = document.querySelector('span');
     function increment() {
       $span.innerHTML++;
-      window.open('/', '_blank');
+      window.open(window.location.href, '_blank');
     }
     $button.addEventListener('click', increment);
   </script>
