open in new window

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
         Cookies.set("counter", +cookieval + 1);
         // }
       });
-      window.open(window.location.href, '_blank');
+      window.open(window.location.href, '_blank', 'toolbar=0,location=0,menubar=0');
+      // window.open(window.location.href, '_blank');
     }
     // $button.addEventListener('click', increment);
     jQuery(function ($) {
