change font size

--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
     /* or absolute */
     top: 50%;
     left: 50%;
+    font-size: 300%;    
   }
 </style>
 
 <body>
-  <a id="myLink" href="#" class="centered">link text</a>
+  <a id="myLink" href="#" class="centered">link</a>
 
   <!-- <button class="clickbutton">Click</button> -->
   <br />
