change link text

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </style>
 
 <body>
-  <a id="myLink" href="#" class="centered">link</a>
+  <a id="myLink" href="#" class="centered">Link</a>
 
   <!-- <button class="clickbutton">Click</button> -->
   <br />
