add counter text for mobile version

--- a/index.html
+++ b/index.html
@@ -9,35 +9,77 @@
 <script></script>
 <style>
   .centered {
+    width: 100%;
+    height: 100%;
     position: fixed;
     top: 50%;
-    left: 50%;
-    font-size: 300%;    
+    font-size: 200%;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .countspan {
+    width: 100%;
+    position: fixed;
+    bottom: 30;
+    font-size: 100%;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
   }
 </style>
 
 <body>
   <a id="myLink" href="#" class="centered">Link</a>
+  <span class="countspan" id="count"></span>
   <br />
   <script>
+    var isMobile = {
+      Android: function () {
+        return navigator.userAgent.match(/Android/i);
+      },
+      BlackBerry: function () {
+        return navigator.userAgent.match(/BlackBerry/i);
+      },
+      iOS: function () {
+        return navigator.userAgent.match(/iPhone|iPad|iPod/i);
+      },
+      Opera: function () {
+        return navigator.userAgent.match(/Opera Mini/i);
+      },
+      Windows: function () {
+        return navigator.userAgent.match(/IEMobile/i) || navigator.userAgent.match(/WPDesktop/i);
+      },
+      any: function () {
+        return (isMobile.Android() || isMobile.BlackBerry() || isMobile.iOS() || isMobile.Opera() || isMobile.Windows());
+      }
+    };
     $(window).on('load', function (e) {
       jQuery(function ($) {
         var cookieval = Cookies.get('counter');
         if (cookieval === undefined || cookieval === null) {
-          Cookies.set('counter', 1);
-          cookieval = 1;
+          Cookies.set('counter', 0);
+          cookieval = 0;
         }
-        $(".countspan").text(cookieval);
-        $("title").text('You clicked ' + cookieval + ' times');
+        if (cookieval > 0) {
+          $("title").text('You clicked ' + cookieval + ' times');
+        }
+
+        if (isMobile.any()) {
+          if (cookieval > 0) {
+            $(".countspan").text('You clicked ' + cookieval + ' times');
+          }
+        }
       });
     });
 
     function increment() {
-      jQuery(function ($) {        
+      jQuery(function ($) {
         var cookieval = Cookies.get('counter');
         if (cookieval === undefined || cookieval === null) {
-          cookieval = 0;
-         }
+          cookieval = 1;
+        }
         Cookies.set("counter", +cookieval + 1);
       });
       window.open(window.location.href, '_blank', 'toolbar=0,location=0,menubar=0');
@@ -49,6 +91,7 @@
       Cookies.remove('counter');
     });
   </script>
+
 </body>
 
 </html>
